--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,28 @@
-name: EdgePlus CI/CD Pipeline
+name: SonarQube Analysis
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
+  sonarqube:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Display Start Message
-        run: echo "Starting the build process..."
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
-      - name: Run SonarScanner
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          "C:\Users\Deepak Mangal\sonar\sonar-scanner-cli-5.0.1.3006-windows\sonar-scanner-5.0.1.3006-windows\bin\sonar-scanner.bat" \
-          -Dsonar.host.url=http://192.168.16.26:9099 \
-          -Dsonar.login=%SONAR_TOKEN% \
-          -Dsonar.projectKey=test_repoaq1sw2de \
-          -Dsonar.projectName=test_repo
-
-      - name: Change to Project Directory
-        run: cd "${{ github.workspace }}"
-
-      - name: Restore Dependencies
-        run: dotnet restore TestBuildApp/TestBuildApp.sln
-
-      - name: Build Project
-        run: dotnet build TestBuildApp/TestBuildApp.sln
+      - name: Set up SonarQube Scanner
+        uses: sonarsource/sonarqube-scan-action@v1
+        with:
+          sonar-token: ${{ secrets.SONAR_TOKEN }}
+          sonar-project-key: 'test_repoaq1sw2de'
+          sonar-project-name: 'test_repo'
+          sonar-host-url: 'http://192.168.16.26:9099'
