--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@v1
         with:
           sonar-token: ${{ secrets.SONAR_TOKEN }}
-          sonar-project-key: 'test_repoaq1sw2de'
-          sonar-project-name: 'test_repo'
-          sonar-host-url: 'http://192.168.16.26:9099'
+          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+          sonar-project-name: ${{ secrets.SONAR_PROJECT_NAME }}
+          sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
