--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,3 @@
-name: SonarQube Analysis
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
@@ -13,18 +6,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '17'
+      # Set up JDK and any other necessary steps...
 
       - name: Set up SonarQube Scanner
         uses: sonarsource/sonarqube-scan-action@v1
         with:
-          entryPoint: 'sonar-scanner'
-          args: >
-            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.projectName=${{ secrets.SONAR_PROJECT_NAME }}
+          sonar-token: ${{ secrets.SONAR_TOKEN }}
+          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
+          sonar-project-name: ${{ secrets.SONAR_PROJECT_NAME }}
+          sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
