--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,10 @@
+name: SonarQube Analysis
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
@@ -6,7 +13,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      # Set up JDK and any other necessary steps...
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '17'
 
       - name: Set up SonarQube Scanner
         uses: sonarsource/sonarqube-scan-action@v1
