--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Set up SonarQube Scanner
         uses: sonarsource/sonarqube-scan-action@v1
         with:
-          sonar-token: ${{ secrets.SONAR_TOKEN }}
-          sonar-project-key: ${{ secrets.SONAR_PROJECT_KEY }}
-          sonar-project-name: ${{ secrets.SONAR_PROJECT_NAME }}
-          sonar-host-url: ${{ secrets.SONAR_HOST_URL }}
+          args: >
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.projectName=${{ secrets.SONAR_PROJECT_NAME }}
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
