--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Sonar Build test
+name: Check Secrets
 
 on:
   push:
@@ -6,54 +6,12 @@ on:
       - main
 
 jobs:
-  checkSonarQubeServer:
-    name: Check SonarQube Server
+  check-secrets:
     runs-on: ubuntu-latest
     steps:
-      - name: Check SonarQube Server
+      - name: Check Secrets
         run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" http://192.168.16.26:9099/)
-          if [ $response -eq 200 ]; then
-            echo "SonarQube server is up and running."
-          else
-            echo "Failed to connect to SonarQube server. HTTP Status code: $response"
-            exit 1
-          fi
-
-  build:
-    name: Build
-    runs-on: windows-latest
-    permissions: read-all
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 17
-        uses: actions/setup-java@v1
-        with:
-          java-version: 17
-      - name: Cache SonarQube packages
-        uses: actions/cache@v1
-        with:
-          path: ~\.sonar\cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache SonarQube scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v1
-        with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-      - name: Install SonarQube scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
-        run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-      - name: Build and analyze
-        shell: powershell
-        run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"test_repoaq1sw2de" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"
-          dotnet build
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          echo "SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}"
+          echo "SONAR_PROJECT_NAME: ${{ secrets.SONAR_PROJECT_NAME }}"
+          echo "SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}"
+          echo "SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}"
