--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Setup JDK
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'  # Change this to the required JDK version
+        distribution: 'adopt'
+
     - name: Cache SonarQube packages
       uses: actions/cache@v2
       with:
@@ -21,11 +27,9 @@ jobs:
         key: ${{ runner.os }}-sonar
         restore-keys: ${{ runner.os }}-sonar
 
-    - name: Build with Maven
-      run: mvn clean verify
-
-    - name: Analyze with SonarQube
-      run: mvn sonar:sonar \
+    - name: Build and analyze with Maven
+      run: |
+        mvn clean verify sonar:sonar \
           -Dsonar.projectKey=test_repoaq1sw2de \
           -Dsonar.host.url=http://192.168.16.26:9099 \
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
