--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
         unzip sonar-scanner.zip -d sonar-scanner
         echo "SonarScanner installed successfully."
 
-    - name: Build and analyze with Maven
+    - name: Build and analyze with SonarScanner
       run: |
-        sonar-scanner/bin/sonar-scanner \
+        sonar-scanner/sonar-scanner-5.0.1.3006-windows/bin/sonar-scanner \
           -Dsonar.projectKey=test_repoaq1sw2de \
           -Dsonar.host.url=http://192.168.16.26:9099 \
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
