--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
     name: Build and Analyze
     runs-on: ubuntu-latest
 
+    env:
+      SONAR_SCANNER_HOME: C:\\sonar-scanner-5.0.1.3006-windows
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -28,4 +31,4 @@ jobs:
         echo "SonarScanner installed successfully."
 
     - name: Build and analyze with SonarScanner
-      run: C:\\sonar-scanner-5.0.1.3006-windows\\bin\\sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      run: $SONAR_SCANNER_HOME\\bin\\sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=${{ secrets.SONAR_TOKEN }}
