--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,11 @@ jobs:
         unzip sonar-scanner.zip -d sonar-scanner
         echo "SonarScanner installed successfully."
 
-    - name: Build and analyze with SonarScanner
-      run: $SONAR_SCANNER_HOME\\bin\\sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+    - name: Run SonarScanner
+      run: |
+        $SONAR_SCANNER_HOME/bin/sonar-scanner.bat \
+        -Dsonar.projectKey=test_repoaq1sw2de \
+        -Dsonar.host.url=http://192.168.16.26:9099 \
+        -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      shell: bash
+
