--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: SonarQube CI
+name: Sonar Scan
 
 on:
   push:
@@ -7,33 +7,21 @@ on:
 
 jobs:
   build:
-    name: Build and Analyze
-    runs-on: ubuntu-latest
-
-    env:
-      SONAR_SCANNER_HOME: C:\\sonar-scanner-5.0.1.3006-windows
+    runs-on: windows-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout Repository
       uses: actions/checkout@v2
-
-    - name: Cache SonarQube packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.sonar/cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
-
-    - name: Install SonarQube scanner
+      
+    - name: Download SonarScanner
       run: |
-        curl -L -o sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-windows.zip
-        unzip sonar-scanner.zip -d sonar-scanner
-        echo "SonarScanner installed successfully."
-
+        curl -L -o sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-windows.zip
+        Expand-Archive sonar-scanner-cli.zip -DestinationPath C:\sonar-scanner
+      
+    - name: Set SonarScanner Path
+      run: |
+        echo ##[set-env name=PATH;]C:\sonar-scanner\bin;%PATH%
+      
     - name: Run SonarScanner
       run: |
-        $SONAR_SCANNER_HOME/bin/sonar-scanner.bat \
-        -Dsonar.projectKey=test_repoaq1sw2de \
-        -Dsonar.host.url=http://192.168.16.26:9099 \
-        -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-      shell: bash
+        sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.sources=src -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=sqp_75a485ca7f0854c5b0aa32243614bca5a666558e
