--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
         $path = [System.Environment]::GetEnvironmentVariable("Path", "Machine")
         [System.Environment]::SetEnvironmentVariable("Path", "$path;C:\sonar-scanner\bin", "Machine")
       
-    - name: Run SonarScanner
+    - name: Execute SonarScanner
       run: |
         sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.sources=src -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=sqp_75a485ca7f0854c5b0aa32243614bca5a666558e
