--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,6 @@ jobs:
         curl -L -o sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-windows.zip
         Expand-Archive sonar-scanner-cli.zip -DestinationPath C:\sonar-scanner
       
-    - name: Add SonarScanner to Path
-      run: |
-        $path = [System.Environment]::GetEnvironmentVariable("Path", "Machine")
-        [System.Environment]::SetEnvironmentVariable("Path", "$path;C:\sonar-scanner\bin", "Machine")
-      
     - name: Execute SonarScanner
       run: |
-        sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.sources=src -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=sqp_75a485ca7f0854c5b0aa32243614bca5a666558e
+        C:\sonar-scanner\bin\sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.sources=src -Dsonar.host.url=http://192.168.16.26:9099 -Dsonar.login=sqp_75a485ca7f0854c5b0aa32243614bca5a666558e
