--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: SonarQube Scan
         run: |
-          sonar-scanner.bat \
+          C:\sonar-scanner\bin\sonar-scanner.bat \
             -Dsonar.projectKey=test_repoaq1sw2de \
             -Dsonar.host.url=http://localhost:9000 \
             -Dsonar.login=sqp_b1b9028638217f797048a9570753e3a125591c51
