--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
       # Set up environment variables or paths
       - name: Set up environment
         run: |
-          echo "PATH_TO_SONAR_SCANNER=c:/sonar-scanner/bin" >> $GITHUB_ENV
+          echo "PATH_TO_SONAR_SCANNER=/mnt/c/sonar-scanner/bin" >> $GITHUB_ENV
 
       # Use the defined path in the subsequent steps
       - name: Run SonarQube analysis
         run: |
           export PATH="$PATH_TO_SONAR_SCANNER:$PATH"
-          sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://localhost:9000 -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
+          /mnt/c/sonar-scanner/bin/sonar-scanner.bat -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://localhost:9000 -Dsonar.token=sqp_b1b9028638217f797048a9570753e3a125591c51
