--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,15 @@
-name: SonarQube Analysis
+name: Display Text File Content
 
 on:
   push:
     branches:
-      - main  # Adjust branch name as needed
+      - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  display_content:
+    runs-on: windows-latest
 
-      # Use the defined path in the subsequent steps
-      - name: Run SonarQube analysis
+    steps:
+      - name: Read and display text file content
         run: |
-          sonar-scanner -Dsonar.login=sqp_b1b9028638217f797048a9570753e3a125591c51 -Dsonar.projectKey=test_repoaq1sw2de
+          Get-Content "C:\Users\Deepak Mangal\1.txt"
