--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,20 @@
-name: SonarQube Analysis
+name: My Workflow
 
 on:
   push:
     branches:
-      - main  # Adjust branch name as needed
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Add Sonar Scanner path to $GITHUB_PATH
-      - name: Set up Sonar Scanner path
-        run: echo "C:\sonar-scanner\bin" >> $GITHUB_PATH
-
-      # Verify Sonar Scanner path
-      - name: Verify Sonar Scanner path
-        run: sonar-scanner -h
+    - name: Check out code
+      uses: actions/checkout@v2
+      
+    - name: Set up environment
+      run: |
+        # Use PowerShell to access environment variables
+        echo "Path: $env:PATH"
+        echo "GitHub Token: $env:SONAR_HOST_URL"
