--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
       
-    - name: Set up environment
-      run: |
-        # Use PowerShell to access environment variables
-        echo "Path: $env:PATH"
-        echo "GitHub Token: $env:SONAR_HOST_URL"
+      - name: Set up environment
+        run: |
+          REM Use Command Prompt to access environment variables
+          echo Path: %PATH%
+          echo GitHub Token: %SONAR_HOST_URL%
+      
+      - name: Run SonarQube Scanner
+        run: |
+          sonar-scanner -Dsonar.projectKey=test_repoaq1sw2de -Dsonar.host.url=http://localhost:9000 -Dsonar.login=sqp_b1b9028638217f797048a9570753e3a125591c51
