--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
       
     - name: Set up environment
       run: |
+        echo "Path: $PATH"
         echo "Sonar Scanner Path: $SONAR_SCANNER_PATH"
         
     - name: Run SonarScanner
