--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: SonarQube Scan
-        run: docker run --network host sonarsource/sonarqube-scan-action:latest
+        run: |
+          docker run --network host \
+            -e SONAR_TOKEN=sqp_d8ee3f7ebaac811a63c852786c3b177cae66edc0 \
+            sonarsource/sonar-scanner-cli \
+            -Dsonar.projectKey=test_repoaq1sw2de
